fix horizontal scroll bug

--- a/_sass/_elevate_theme.scss
+++ b/_sass/_elevate_theme.scss
@@ -36,7 +36,7 @@ $on-laptop:        800px !default;
 
 @mixin hide-text {
   overflow: hidden;
-  text-indent: 101%;
+  text-indent: -100%;
   white-space: nowrap;
 }
 
